Panel components manual entry